# Site-Web

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: build.py  fetch.py
app/context/: __init__.py  posts.py  professions.py
conf/: context.production.toml  context.toml  medecins.toml  posts.toml  professions.toml  routes.toml
public/ui/: colors.css  components.css  display.css  fonts.css  header.css
public/ui/src/: home.js  table.js
src/pages/: gergy.html  home.html  infos.html  verdun.html
src/pages/professions/: generaliste.html  infirmiere-asalee.html  infirmiere.html  kinesitherapeute.html  orthophoniste.html  osteopathe.html  pharmacien.html  podologue.html  psychologue.html  sage-femme.html
src/templates/: page.html  profession.html  table.html
