[tool.poetry]
name = "msp-ap3s"
version = "0.1.0"
description = "Site web de l'AP3S - Association Pluriprofessionelle Saône Soins et Santé"
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "msp_ap3s"}]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
tomli-w = "^1.0.0"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
mypy = "^1.5.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
